# filup

./: .gitignore  Cargo.toml  README.md  build.rs
assets/css/: root.css  theme.css
assets/javascript/: root.js
src/: api.rs  main.rs  route.rs
src-ts/: package.json  root.ts  tsconfig.json
src/api/: a_upload.rs  api_details.rs  api_hash.rs  api_progress.rs  api_remove.rs  api_upload.rs
src/route/: r_root.rs  route_root.rs
templates/: root.html
