[package]
name = "filup"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
futures-util = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
